Bug 155387 - ReqIF export produces invalid XML (too many closing li elements) for a list
Summary: ReqIF export produces invalid XML (too many closing li elements) for a list
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.5
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-18 11:35 UTC by Mike Kaganski
Modified: 2023-06-16 12:52 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A sample list with separate sublists (916 bytes, application/vnd.oasis.opendocument.text)
2023-05-18 11:35 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-05-18 11:35:40 UTC
Created attachment 187369 [details]
A sample list with separate sublists

Open the attached document; export to ReqIF using this command:

> soffice --convert-to "xhtml:HTML (StarWriter):xhtmlns=reqif-xhtml" sub_li_and_ctd.fodt

The resulting .xhtml will contain one too many </reqif-xhtml:li> closing elements, so will be invalid XML/ReqIF.
Comment 1 Commit Notification 2023-05-18 15:49:08 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/78eedc1a1f73f06fca1384f848f2d6b7b89787cb

tdf#155387: fix list restart and opening/closing conditions

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-05-22 09:29:05 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/ebf8b0b0699fe34c86badb3087869d902a4e40a8

tdf#155387: fix list restart and opening/closing conditions

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.