tdf#155387: fix list restart and opening/closing conditions

1. List restart flag in the node does not yet mean that the restart
would actually happen: it will be ignored, if the next node is more
nested than the previous one.

2. When writing nested list items, we should not write additional
<li><ul> pairs for current level (previously, only level 0 was
skipped); same for closing.

Change-Id: I5f67e8fa9236e7e2e6dba2e0ec5dffbf0d7b7f8b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151958
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152010